--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "author": "Pavlo Rosa",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "colors": "^1.4.0",
     "express": "^4.17.1",
-    "typescript": "^3.9.5"
+    "typescript": "^3.9.5",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "ts-node-dev": "^1.0.0-pre.47"
