--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
-    "prod": "tsc && node ./dist/app.js"
+    "prod": "tsc && node build/app.js",
+    "start-server": "tsc && node build/app.js",
+    "start": "nodemon -e ts  -w ./ -x npm run start-server"
   },
   "repository": {
     "type": "git",
@@ -16,12 +18,21 @@
   "author": "Pavlo Rosa",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/node": "^14.0.13",
+    "@types/validator": "^13.0.0",
+    "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.13",
     "typescript": "^3.9.5",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/sequelize": "^4.28.9",
     "ts-node-dev": "^1.0.0-pre.47"
   }
 }
