+ created first route + changes LoggerSerivice + created bin/www and separated config app

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "tsc": "tsc",
     "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "prod": "tsc && node build/app.js",
-    "start-server": "tsc && node build/app.js",
+    "start-server": "tsc && node build/bin/www",
     "start": "nodemon -e ts  -w ./ -x npm run start-server"
   },
   "repository": {
@@ -22,8 +22,10 @@
     "@types/validator": "^13.0.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
