--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "devDependencies": {
     "@types/sequelize": "^4.28.9",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
+    "eslint": "^7.2.0",
+    "prettier": "2.0.5",
     "ts-node-dev": "^1.0.0-pre.47"
   }
 }
