--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,11 @@
     "password": null,
     "database": "teethdb",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "postgres",
+    "dialectOptions": {
+      "useUTC": true
+    },
+    "timezone": "utc"
   },
   "test": {
     "username": "thmin",
