+ sequelize migrator works typescript

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "ts-node-dev --respawn --transpileOnly ./src/app.ts",
     "prod": "tsc && node build/app.js",
     "start-server": "tsc && node build/bin/www",
-    "start": "nodemon -e ts  -w ./ -x npm run start-server"
+    "start": "nodemon -e ts  -w ./ -x npm run start-server",
+    "sequelize-auto": "sequelize-automate -t ts -h localhost -d teethdb -u thmin -P 5432  -e postgres -o models"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.13",
+    "sequelize-automate": "^1.2.2",
     "typescript": "^3.9.5",
     "winston": "^3.2.1"
   },
