--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "author": "Pavlo Rosa",
   "dependencies": {
+    "@types/bluebird": "^3.5.32",
     "@types/express": "^4.17.6",
-    "@types/node": "^14.0.13",
-    "@types/validator": "^13.0.0",
+    "@types/node": "^14.0.22",
+    "@types/validator": "^13.1.0",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -31,8 +32,10 @@
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
     "sequelize": "^5.21.13",
     "sequelize-automate": "^1.2.2",
+    "sequelize-typescript": "^1.1.0",
     "typescript": "^3.9.5",
     "winston": "^3.2.1"
   },
